--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>books.hudi.blog</h1>
-<h2>Done</h2>
+<h2>✅ Done</h2>
 <h3>2024년</h3>
 <h4>1월</h4>
 <li>
@@ -68,6 +68,6 @@
 <li><b>책 잘 읽는 방법</b></li>
 <li><b>지적 대화를 위한 넓고 얕은 지식 1</b></li>
 
-<h2>In Progress</h2>
+<h2>🏃‍♂️ In Progress</h2>
 
-<h2>To do</h2>
+<h2>👀 Interested In</h2>
